# gateway-esp

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: publish.yml
cmake/: scadable_gen_defaults.py
docs/: AGENTS.md  architecture.md  config-variables.md  local-build-observability.md  troubleshooting.md
include/: scadable.h
private_include/: config_store.h  log_sink.h  scadable_internal.h
src/: edge.c  heartbeat.c  log_sink.c  metrics.c  mqtt_session.c  ota_machine.c  scadable_main.c  upload.c
